# gameofdeath

./: .gitignore  Cargo.toml  README.md  oraclelife.toml  requirement.md
patterns/: garden_of_eden.lif  glider_pulsar.lif
src/: camera.rs  cell_renderer.rs  config.rs  game_config.rs  hud.rs  infinite_grid.rs  io.rs  lib.rs  main.rs  settings.rs  start_screen.rs  synth_ui.rs  ui.rs
src/audio/: ddsp_engine.rs  ddsp_game_analysis.rs  hybrid_dungeon_synth.rs  illbient_groove.rs  kira_manager.rs  mod.rs  scales.rs  spatial_audio.rs  spatial_mapping.rs
src/io/: lif.rs
